--- a/nibblerSources/CMakeLists.txt
+++ b/nibblerSources/CMakeLists.txt
@@ -135,7 +135,7 @@ add_executable(${NAME}
         class/gui/widget/SpriteColorProperties.hpp
         class/cores/Snake.hpp
         class/cores/Snake.cpp
-        class/cores/GameManager.cpp class/cores/GameManager.hpp class/cores/ExternalLibraryDisplayManager.cpp class/cores/ExternalLibraryDisplayManager.hpp class/cores/ExternalLibrarySoundManager.cpp class/cores/ExternalLibrarySoundManager.hpp class/cores/Test.cpp class/cores/Test.hpp class/gui/widget/WidgetSettingGame.cpp class/gui/widget/WidgetSettingGame.hpp class/gui/widget/WidgetServerPannel.cpp class/gui/widget/WidgetServerPannel.hpp class/gui/widget/WidgetEtat.cpp class/gui/widget/WidgetEtat.hpp class/gui/GuiData.hpp class/cores/DynamicLinkLibrary.cpp class/cores/DynamicLinkLibrary.hpp)
+        class/cores/GameManager.cpp class/cores/GameManager.hpp class/cores/DisplayDynamicLibrary.cpp class/cores/DisplayDynamicLibrary.hpp class/cores/SoundDynamicLibrary.cpp class/cores/SoundDynamicLibrary.hpp class/cores/Test.cpp class/cores/Test.hpp class/gui/widget/WidgetSettingGame.cpp class/gui/widget/WidgetSettingGame.hpp class/gui/widget/WidgetServerPannel.cpp class/gui/widget/WidgetServerPannel.hpp class/gui/widget/WidgetEtat.cpp class/gui/widget/WidgetEtat.hpp class/gui/GuiData.hpp class/cores/ADynamicLinkLibrary.cpp class/cores/ADynamicLinkLibrary.hpp class/cores/DisplayDynamicLibrary.cpp class/cores/DisplayDynamicLibrary.hpp class/cores/SoundDynamicLibrary.cpp class/cores/SoundDynamicLibrary.hpp)
 
 
 target_include_directories(
